fixed night-light-friend. it's avr-hal is the authoritative one, now

--- a/328-playground/Makefile
+++ b/328-playground/Makefile
@@ -8,7 +8,7 @@ TARGET     := main
 SRC_DIR    := src
 INC_DIR    := include
 BUILD_DIR  := build
-HAL_LOC    := atmega328-hal
+HAL_LOC    := avr-hal
 
 CXX        := avr-g++
 OBJCOPY    := avr-objcopy
@@ -20,7 +20,7 @@ SRC        := $(wildcard $(SRC_DIR)/*.cpp)
 SRC        += $(wildcard $(HAL_LOC)/src/*.cpp)
 
 CXXFLAGS   := -mmcu=$(MCU) -DF_CPU=$(F_CPU)
-CXXFLAGS   += -I$(INC_DIR) -Iatmega328-hal/include
+CXXFLAGS   += -I$(INC_DIR) -I$(HAL_LOC)/include
 CXXFLAGS   += -Os -Wall -std=gnu++17 -ffunction-sections -fdata-sections
 CXXFLAGS   += -Wextra -Wpedantic -Wshadow -Wconversion # -Werror
 CXXFLAGS   += -Wsign-conversion -Wunreachable-code -Weffc++
