avr-hal is now shared in the root directory...
only night-light-friend-attiny85/ and 328-playground/ use it, currently

--- a/night-light-friend-attiny85/Makefile
+++ b/night-light-friend-attiny85/Makefile
@@ -6,7 +6,7 @@ TARGET     := main
 SRC_DIR    := src
 INC_DIR    := include
 BUILD_DIR  := build
-HAL_LOC    := avr-hal
+HAL_LOC    := ../avr-hal
 
 CXX        := avr-g++
 OBJCOPY    := avr-objcopy
