--- a/night-light-friend-attiny85/Makefile
+++ b/night-light-friend-attiny85/Makefile
@@ -20,7 +20,7 @@ SRC        += $(wildcard $(HAL_LOC)/src/*.cpp)
 CXXFLAGS   := -mmcu=$(MCU) -DF_CPU=$(F_CPU)
 CXXFLAGS   += -I$(INC_DIR) -I$(HAL_LOC)/include
 CXXFLAGS   += -Os -Wall -std=gnu++17 -ffunction-sections -fdata-sections
-CXXFLAGS   += -Wextra -Wpedantic -Wshadow -Wconversion # -Werror
+CXXFLAGS   += -Wextra -Wpedantic -Wshadow # -Wconversion # -Werror
 CXXFLAGS   += -Wsign-conversion -Wunreachable-code -Weffc++
 CXXFLAGS   += -Wmissing-braces -Wnon-virtual-dtor -Winline
 CXXFLAGS   += -Wnormalized -Wold-style-cast
