assembly implementation of LFSR in avr-hal, now

--- a/night-light-friend-attiny85/Makefile
+++ b/night-light-friend-attiny85/Makefile
@@ -16,6 +16,8 @@ PROGRAMMER := usbtiny
 
 SRC        := $(wildcard $(SRC_DIR)/*.cpp)
 SRC        += $(wildcard $(HAL_LOC)/src/*.cpp)
+SRC        += $(wildcard $(HAL_LOC)/src/**/*.cpp)
+SRC        += $(wildcard $(HAL_LOC)/src/**/*.S)
 
 CXXFLAGS   := -mmcu=$(MCU) -DF_CPU=$(F_CPU)
 CXXFLAGS   += -I$(INC_DIR) -I$(HAL_LOC)/include
