--- a/night-light-friend-attiny85/Makefile
+++ b/night-light-friend-attiny85/Makefile
@@ -39,7 +39,7 @@ all: $(BUILD_DIR)/$(TARGET).hex
 $(BUILD_DIR)/%.elf: $(SRC)
 	@mkdir -p $(BUILD_DIR)
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) $^ -o $@
-	$(SIZE) $@
+	$(SIZE) -G --mcu=$(MCU) $@
 
 $(BUILD_DIR)/%.hex: $(BUILD_DIR)/%.elf
 	$(OBJCOPY) -O ihex -R .eeprom $< $@
